Fix element spacing

--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,9 @@
     font-display: swap;
 }
 
+html { box-sizing: border-box; }
+*, *::before, *::after { box-sizing: inherit; }
+
 * {
     margin: 0;
     padding: 0;
@@ -74,22 +77,39 @@
     height: 12vh;
 }
 
-.form-container {
-    
+.form-container .heading {
+    padding: 7rem 3rem 0rem;
+    font-weight: bold;
 }
 
 .form-banner {
     background-color: #fff;
-    padding: 2rem 3rem;
     width: 100%;
+    box-shadow: 0 4px 7px -2px lightgray;
+    padding: 1rem 3rem;
 }
 
 .form-title {
-    
+    padding: 0 0 1rem;
+    font-weight: bold;
 }
 
 .row {
     display: flex;
-    margin-bottom: 1em;
-    gap: 1rem;
+    margin-bottom: 2em;
+    gap: 2rem;
+    font-size: 0.5em;
+    text-transform: uppercase;
+    width: 100%;
+}
+
+.field {
+    flex: 1;  
+    display: flex;
+    flex-direction: column;
+}
+
+.account {
+    padding: 1.5rem 3rem;
+    margin-bottom: 2em;
 }
